# EmRAGE

./: Dockerfile  README.md  install.sh  pyproject.toml
data/emails/: example.eml
data/evaluate/: chunk_size_results.json  evaluation_report_20251223_184149.txt  model_comparison_146.json  test_preguntas_10.txt  test_respuestas_10.txt
data/processed/: enron_sample_1000+146+noise.json  enron_sample_1000+166.json  enron_sample_1000+60.json  model_comparison_1000+146+noise.json  model_comparison_1000+166+noise.json  model_comparison_60.json
src/: cli.py  config_manager.py  data_loader.py  email_loader.py  embeddings_system.py  evaluate_rag.py  evaluation_report_20251202_191552.txt  evaluation_report_20251203_161703.txt  rag_engine.py  test_preguntas_146.txt  thunderbird_loader.py
