[project]
name = "EmRAGE"
version = "0.1.0"
description = ""
authors = [
    {name = "fran2410",email = "franciscochicotemartin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "click (>=8.1.7)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "dateparser (>=1.2.2,<2.0.0)",
    "chromadb (>=1.1.1,<2.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "spacy (>=3.8.7,<4.0.0)"
]


[project.scripts]
emrage = "src.cli:main"
[tool.poetry]
packages = [
    { include = "src" }  
]